attempting to fix oak leaf and img overlap

--- a/src/styles/MeetGreen.css
+++ b/src/styles/MeetGreen.css
@@ -1,11 +1,34 @@
 .grid-template {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
+	max-width: 100%;
+	margin: 0 auto;
 }
 
 .column-spread {
 	grid-column: 1 / 5;
 	max-height: 96vh;
+}
+
+.text-container {
+	grid-column: 3 / -1;
+	max-height: 96vh;
+	/* padding: 13em 0 0 0; */
+}
+
+.oak-img {
+	grid-column: 1 / 4;
+	max-height: 96vh;
+
+	& img {
+		height: 100%;
+		width: 100%;
+		object-fit: cover;
+	}
+}
+
+.oak-img .text-container {
+	grid-row: 1 / 2;
 }
 
 .title-phrase {
